syntax = "proto3";

package v1;

import "google/protobuf/empty.proto";
import "admin-category.proto";
import "admin-property.proto";
import "vendor.proto";
import "currency.proto";
//import "google/protobuf/wrappers.proto";

message AdminItem {
  string id = 1;
  uint32 user_id = 2;
  uint64 parent_id = 4;
  uint32 category_id = 5;
  string title = 6;
  string article = 7;
  string alias = 8;
  string description = 9;
  float price = 10;
  float old_price = 11;
  int32 count = 13;
  bool in_stock = 14;
  bool disable = 15;
  uint32 sort = 16;
  string seo_title = 17;
  string seo_description = 18;
  string seo_keywords = 19;

  Vendor vendor = 20;
  Currency currency = 21;
  repeated AdminItemImage images = 22;
  repeated AdminItem offers = 23;
}

message AdminItemImage {
  uint32 id = 1;
  uint32 user_id = 2;
  uint64 item_id = 3;
  string filename = 4;
  uint32 sort = 5;
  uint32 property_value_id = 6;
  bool main = 7;
}

message AdminItemProperty {
  string code = 1;
  repeated uint32 property_value_ids = 2;
}

message AdminItemRequest {
  uint32 id = 1;
}

message AdminDraftRequest {
  uint64 parent_id = 1;
}

message AdminItemsRequest {
  uint32 page = 1;
  uint32 page_size = 2;
  string sort = 3;
  string direction = 4;
}

message AdminOffersRequest {
  uint64 item_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message AdminEditItemRequest {
  uint32 id = 1;
  uint64 parent_id = 2;
  string title = 3;
  string article = 4;
  string alias = 5;
  int32 count = 6;
  bool inStock = 7;
  string description = 8;
  float price = 9;
  float old_price = 10;
  uint32 currency_id = 11;
  bool disable = 12;
  uint32 sort = 13;
  uint32 vendor_id = 14;
  repeated uint32 item_images = 15;
  repeated uint32 upload_images = 16;
  repeated AdminItemProperty properties = 17;
}

message AdminDeleteItemRequest {
  uint32 id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
  string sort = 4;
  string direction = 5;
}

message AdminDeleteOfferRequest {
  uint32 id = 1;
  uint64 parent_id = 2;
  uint32 page = 3;
  uint32 page_size = 4;
  string sort = 5;
  string direction = 6;
}

message AdminItemBindRequest {
  uint32 id = 1;
  string category_id = 2;
}

message AdminUploadOfferRequest {
  string title = 1;
  string article = 2;
  uint64 parent_id = 3;
  uint32 category_id = 4;
  float price = 5;
  string currency = 6;
  int32 count = 7;
  bool inStock = 8;
  string description = 9;
  string vendor = 10;
  string country = 11;
  repeated string images = 12;
  repeated uint32 properties = 13;
}

message AdminItemResponse {
  AdminItem item = 1;
}

message AdminItemsResponse {
  repeated AdminItem items = 1;
  uint32 total = 2;
}

message AdminOffersResponse {
  repeated AdminItem offers = 1;
  uint32 total = 2;
}

message AdminItemImagesResponse {
  repeated AdminItemImage images = 1;
}

service AdminItemService {
  rpc AdminItem(AdminItemRequest) returns (AdminItemResponse);
  rpc AdminCreateDraftItem(AdminDraftRequest) returns (AdminItemResponse);
  rpc AdminEditItem(AdminEditItemRequest) returns (AdminItemResponse);
  rpc AdminDeleteItem(AdminDeleteItemRequest) returns (AdminItemsResponse);
  rpc AdminDeleteOffer(AdminDeleteOfferRequest) returns (AdminOffersResponse);
  rpc AdminItems(AdminItemsRequest) returns (AdminItemsResponse);
  rpc AdminGetUploadImages(google.protobuf.Empty) returns (AdminItemImagesResponse);
  rpc AdminItemCategories(AdminItemRequest) returns (AdminCategoriesResponse);
  rpc AdminItemBindCategory(AdminItemBindRequest) returns (AdminCategoriesResponse);
  rpc AdminItemUnbindCategory(AdminItemBindRequest) returns (AdminCategoriesResponse);
  rpc AdminItemProperties(AdminItemRequest) returns (AdminPropertiesResponse);
  rpc AdminItemOffers(AdminOffersRequest) returns (AdminOffersResponse);
  rpc AdminUploadOffer(AdminUploadOfferRequest) returns (AdminItemResponse);
}
